log
Thu 16 Mar 2023 03:36:25 PM UTC: 
 tests:  0|7
total_score: 0/70
127f82e
Thu 16 Mar 2023 03:38:12 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|6
total_score: 10/70
b8f3653
Thu 16 Mar 2023 03:44:40 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|6
total_score: 10/70
bea237e
Thu 16 Mar 2023 03:45:12 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:34:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |     if ( *a[i] > *a[i + 1] ){
      |          ^~~~~
exercises.c:34:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |     if ( *a[i] > *a[i + 1] ){
      |                  ^~~~~~~~~
exercises.c:35:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       *max = *a[i];
      |              ^~~~~
Compilation failed
44f7143
Thu 16 Mar 2023 03:46:26 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘==’ token
   33 |   int vector == *a
      |              ^~
exercises.c:33:14: error: expected expression before ‘==’ token
exercises.c: At top level:
exercises.c:44:1: error: expected identifier or ‘(’ before ‘}’ token
   44 | }
      | ^
Compilation failed
a3eb80e
Thu 16 Mar 2023 03:46:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:3: error: expected ‘,’ or ‘;’ before ‘for’
   35 |   for ( int i = 0 ; i > n ; i++){
      |   ^~~
exercises.c:35:21: error: ‘i’ undeclared (first use in this function)
   35 |   for ( int i = 0 ; i > n ; i++){
      |                     ^
exercises.c:35:21: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:35:32: error: expected ‘;’ before ‘)’ token
   35 |   for ( int i = 0 ; i > n ; i++){
      |                                ^
      |                                ;
exercises.c:35:32: error: expected statement before ‘)’ token
exercises.c:41:5: error: expected expression before ‘}’ token
   41 |     }
      |     ^
exercises.c:33:7: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   33 |   int vector = *a
      |       ^~~~~~
exercises.c: At top level:
exercises.c:44:1: error: expected identifier or ‘(’ before ‘}’ token
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1fca399
Thu 16 Mar 2023 03:46:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:36:16: error: subscripted value is neither array nor pointer nor vector
   36 |     if ( vector[i] > vector[i + 1] ){
      |                ^
exercises.c:36:28: error: subscripted value is neither array nor pointer nor vector
   36 |     if ( vector[i] > vector[i + 1] ){
      |                            ^
exercises.c:41:5: error: expected expression before ‘}’ token
   41 |     }
      |     ^
exercises.c:33:7: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   33 |   int vector = *a;
      |       ^~~~~~
exercises.c: At top level:
exercises.c:44:1: error: expected identifier or ‘(’ before ‘}’ token
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6bb8b78
